--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: sans-serif;
       text-align: center;
       margin-top: 10%;
-      background-color: #f0f0f0;
+      background-color: #cdc263;
     "
   >
     <h1>Hello from Case-6 on EKS!</h1>
