--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body background-color="#FFFF00">
+<body bgcolor="#FFFF00">
   <h1>Hello from Case-6 on EKS!</h1>
   <p>Built with CodeBuild, stored in ECR, and deployed by CodePipeline.</p>
 </body>
